[package]
name = "card"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "~1.10.24"
thiserror = "~1.0"
borsh = "~0.9.1"
spl-token = { version="~3.3.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="1.0.3", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
